...
            {loading ? (
              renderLoading()
            ) : error ? (
              renderError()
            ) : (
              <FlatList
                testID="comments-list"
                ref={flatListRef}
                style={styles.commentsList}
                contentContainerStyle={styles.commentsListContent}
                data={threadedComments}
                renderItem={renderCommentItem}
                keyExtractor={keyExtractor}
...
